objects/DAZN_Events_Calendar__c.object
<CustomObject>
    <description>This object is to store all the Major and other events scheduled</description>
    <fields>
        <fullName>Country_language__c</fullName>
        <description>Languages for this country</description>
        <label>Country language</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Event_Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EN_GB</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>JA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Country__c</fullName>
        <description>Country of this event</description>
        <label>Event Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <description>Start date of the calendar event</description>
        <inlineHelpText>Start date of the calendar event</inlineHelpText>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Major_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a major event</description>
        <label>Is Major Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Localised_Date__c</fullName>
        <description>The date as per the language of the user&apos;s account</description>
        <label>Localised Date</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Localised_Event_description__c</fullName>
        <description>The event description as per the user&apos;s country and language</description>
        <label>Localised Event description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>DAZN Events Calendar</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Localised_Event_description__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Localised_Date__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Event_Country__c</columns>
        <columns>Country_language__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Event_Country__c</columns>
        <columns>Country_language__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Localised_Date__c</columns>
        <columns>Localised_Event_description__c</columns>
        <columns>Is_Major_Event__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Country__c</field>
            <operation>equals</operation>
            <value>AT</value>
        </filters>
        <label>AT Events</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>DE_Events</fullName>
        <columns>NAME</columns>
        <columns>Event_Country__c</columns>
        <columns>Country_language__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Localised_Date__c</columns>
        <columns>Localised_Event_description__c</columns>
        <columns>Is_Major_Event__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Country__c</field>
            <operation>equals</operation>
            <value>DE</value>
        </filters>
        <label>DE Events</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>Event_Details</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Event_Country__c</columns>
        <columns>Country_language__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Localised_Date__c</columns>
        <columns>Localised_Event_description__c</columns>
        <columns>Is_Major_Event__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Country__c</field>
            <operation>equals</operation>
            <value>CH</value>
        </filters>
        <label>CH Events</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>Japanese_Events</fullName>
        <columns>NAME</columns>
        <columns>Event_Country__c</columns>
        <columns>Country_language__c</columns>
        <columns>Localised_Date__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Localised_Event_description__c</columns>
        <columns>Is_Major_Event__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Country__c</field>
            <operation>equals</operation>
            <value>JP</value>
        </filters>
        <label>JP Events</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>Major_Events</fullName>
        <columns>NAME</columns>
        <columns>Is_Major_Event__c</columns>
        <columns>Event_Country__c</columns>
        <columns>Country_language__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Localised_Date__c</columns>
        <columns>Localised_Event_description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Major_Event__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Event_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Major Events</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>DAZN-{0000}</displayFormat>
        <label>DAZN Events Calendar Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DAZN Events Calendars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>